# DCNv4

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
dcnv4/: __init__.py  _ops.pyi  dcnv4_C.pyi  ops.py  triton_ops.py
dcnv4/csrc/: dcnv4.h
dcnv4/csrc/cuda/: common.h  dcnv4_col2im_cuda.cuh  dcnv4_cuda.cu  dcnv4_cuda.h  dcnv4_im2col_cuda.cuh  flash_deform_attn_cuda.cu  flash_deform_attn_cuda.h  flash_deform_col2im_cuda.cuh  flash_deform_im2col_cuda.cuh
dcnv4/functions/: __init__.py  dcnv4_func.py  dcnv4_pytorch.py  dcnv4_triton.py  flash_deform_attn_func.py  table.py  utils.py
dcnv4/modules/: __init__.py  dcnv4.py  flash_deform_attn.py  flash_deform_attn_torch.py
dcnv4/triton/: common.py  dcnv4_triton.py  flash_deform_triton.py
scripts/: benchmark.py  benchmark_triton_vs_cuda.py  dcnv4_flash_regression_test.py  list_kernels.py  measure_flash_deform_attn_tolerance.py  measure_tolerance.py  modal_measure_flash_deform_attn_tolerance.py  modal_measure_tolerance.py
src/: dcnv4.h  vision.cpp
src/cuda/: common.h  dcnv4_col2im_cuda.cuh  dcnv4_cuda.cu  dcnv4_im2col_cuda.cuh  flash_deform_attn_cuda.cu  flash_deform_col2im_cuda.cuh  flash_deform_im2col_cuda.cuh
tests/: test_dynamic_indexing.py  test_feature_availability.py  test_hypothesis_cuda_reference_consistency.py  test_hypothesis_flash_deform_attn_consistency.py  test_hypothesis_triton_reference_consistency.py  test_opcheck.py
