[project]
name = "DCNv4"
version = "1.0.0.post2"
description = "PyTorch Wrapper for CUDA Functions of DCNv4"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Yuwen Xiong" }, { name = "Feng Wang" }]
dependencies = ["torch>=2.0.0", "torchvision"]

[build-system]
requires = ["scikit-build-core>=0.11", "torch>=2.0.0", "numpy"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["dcnv4"]
