[project]
name = "DCNv4"
version = "1.0.0.post2"
description = "PyTorch Wrapper for CUDA Functions of DCNv4"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Yuwen Xiong" }, { name = "Feng Wang" }]
dependencies = ["torch>=2.0.0", "torchvision"]

[build-system]
requires = ["setuptools>=68", "wheel", "torch>=2.0.0", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dcnv4*"]

[dependency-groups]
dev = ["hypothesis-torch", "modal", "pytest"]
